# aicontentcreator

./: .gitignore  README.md  package-lock.json  package.json
Docs/: test.md  test25.md
Docs/ffmpeg/: Installing FFmpeg on Ubuntu.md
Docs/gui/: layout.md
Docs/other/: project_setup.md
Docs/python/: Installing Python on Ubuntu.md  Using Python Virtual Environments.md
crates/daemon/: Cargo.toml
crates/daemon/src/: lib.rs
crates/daemon/src/daemon/: daemon.rs
crates/daemon/src/daemon_actor/: daemon_actor.rs  mod.rs
crates/daemon/src/daemon_command/: daemon_command.rs
crates/daemon/src/daemon_inner/: daemon_inner.rs  mod.rs
crates/daemon/src/daemon_proxy/: daemon_proxy.rs  mod.rs
crates/daemon/src/settings/: daemon_settings.rs  mod.rs  settings.rs
crates/maincore/: Cargo.toml
crates/maincore/src/: lib.rs
crates/swarm/: Cargo.toml
crates/swarm/src/: lib.rs
crates/utility/: Cargo.toml
crates/utility/src/: lib.rs
crates/wallet/: Cargo.toml
desktop/chat_app/: constants.py  main.py  rt.py  run.sh  theme.py
desktop/chat_app/interpreter/: run_predefined_action.py
desktop/chat_app/processing/: predefined_processing.py
desktop/chat_app/ui/: __init__.py  chat_page.py  editor_pages.py  main_window.py
src/: App.css  App.tsx  OLD1-App-tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: OLD1-main-rs  lib.rs  main.rs
src-tauri/src/app_data/: app_paths.rs
src-tauri/src/app_state/: app_paths.rs  app_state.rs  mod.rs
src-tauri/src/content/: content.rs
src-tauri/src/frontend_request/: chats_request.rs  frontend_request.rs  mod.rs  settings_request.rs  types.rs
src-tauri/src/user_chats/: mod.rs  user_chats.rs
src/lib/: backend.ts
src/pages/chatsession/: ChatSession.tsx
src/pages/edit_page/: EditPage.tsx
src/pages/home/: Home.tsx
(+69 files in other folders)
