[package]
name = "global"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "global_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
##########################
thiserror = "1.0"
##########################
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
############################
##tauri-utils = "2"
##directories-next = "2"
############################
## needed for ProjectDirs;
directories = "5"

#################################
tokio = { version = "1.0", features = ["full"] }


#################################
# content localhost
axum = "0.7"
tokio-util = { version = "0.7", features = ["io"] }
mime_guess = "2.0"
mime = "0.3"
tauri-plugin-fs = "2"

##
tower-http = { version = "0.5", features = ["cors"] }

#################################
# for video player
#tauri-plugin-fs = { version = "2.3.0", features = ["fs-all"] }
