[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
utility = { path = "../utility" }
maintx = { path = "../maintx" }
wallet = { path = "../wallet" }
tokio = { version = "1.0", features = ["full"] }
# settings
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
